feat(release): Integrate real AI providers, docs, and enhanced CI
This release transitions the AI embedding providers from deterministic stubs to real HTTP API calls for OpenAI, Gemini, Mistral, Azure OpenAI, and Claude. It also introduces a comprehensive documentation site (EN/TR) powered by DocFX and GitHub Pages.

Key changes include:
- **Real AI Integrations**: Implement HTTP clients and options for all major AI embedding providers, replacing mock implementations.
- **Comprehensive Documentation**: Add extensive multi-language documentation covering core concepts, API, providers, scenarios, setup, and more.
- **GitHub Pages Workflow**: Set up automated deployment of documentation and code coverage reports to GitHub Pages.
- **Enhanced CI/CD**: Update CI to include full code coverage generation and artifact upload. Improve NuGet release process with dynamic versioning and .slnx migration.
- **Expanded Test Suite**: Introduce detailed scenario tests (low, medium, high complexity, sector-specific, workflow status) and HTTP mock tests for AI providers.
- **Updated Sample Application**: Showcase a wider range of scenarios and demonstrate switching between mock and real AI providers.
- **Localization**: Add basic localization for policy decisions.
- **Build System**: Migrate to .slnx solution format and standardize build properties across projects.

BREAKING CHANGE: AI provider implementations now make real external HTTP calls, requiring API keys and network access. Previous deterministic stub behavior is replaced.

--- a/src/Intentum.AI.Mistral/Intentum.AI.Mistral.csproj
+++ b/src/Intentum.AI.Mistral/Intentum.AI.Mistral.csproj
@@ -9,8 +9,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>Intentum.AI.Mistral</PackageId>
-    <Version>1.0.0</Version>
     <Authors>Intentum Contributors</Authors>
     <Description>Mistral adapter for Intentum intent inference.</Description>
     <PackageTags>intent;behavior;ai;mistral;dotnet</PackageTags>
