--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: ci
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -15,8 +15,18 @@ jobs:
         with:
           dotnet-version: '10.0.x'
       - name: Restore
-        run: dotnet restore Intentum.sln
+        run: dotnet restore Intentum.slnx
       - name: Build
-        run: dotnet build Intentum.sln --no-restore
+        run: dotnet build Intentum.slnx --no-restore
       - name: Test
-        run: dotnet test Intentum.sln --no-build
+        run: dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build \
+          /p:CollectCoverage=true \
+          /p:CoverletOutputFormat=opencover \
+          /p:CoverletOutput=TestResults/coverage/ \
+          /p:Threshold=70 \
+          /p:ThresholdType=line
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-opencover
+          path: TestResults/coverage/
