--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -11,17 +11,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set package version from tag
+        id: version
+        run: |
+          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+            echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+          else
+            echo "version=1.0.0" >> $GITHUB_OUTPUT
+          fi
+          echo "Package version: ${{ steps.version.outputs.version }}"
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '10.0.x'
       - name: Restore
-        run: dotnet restore Intentum.sln
+        run: dotnet restore Intentum.slnx
       - name: Build
-        run: dotnet build Intentum.sln -c Release --no-restore
+        run: dotnet build Intentum.slnx -c Release --no-restore -p:Version=${{ steps.version.outputs.version }}
       - name: Test
-        run: dotnet test Intentum.sln -c Release --no-build
+        run: dotnet test tests/Intentum.Tests/Intentum.Tests.csproj -c Release --no-build
       - name: Pack
-        run: dotnet pack Intentum.sln -c Release --no-build
+        run: dotnet pack Intentum.slnx -c Release --no-build -p:Version=${{ steps.version.outputs.version }}
       - name: Push
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
