--- a/src/Intentum.AI.Gemini/Intentum.AI.Gemini.csproj
+++ b/src/Intentum.AI.Gemini/Intentum.AI.Gemini.csproj
@@ -9,8 +9,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>Intentum.AI.Gemini</PackageId>
-    <Version>1.0.0</Version>
     <Authors>Intentum Contributors</Authors>
     <Description>Gemini adapter for Intentum intent inference.</Description>
     <PackageTags>intent;behavior;ai;gemini;dotnet</PackageTags>
