--- a/src/Intentum.AI/Intentum.AI.csproj
+++ b/src/Intentum.AI/Intentum.AI.csproj
@@ -8,8 +8,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>Intentum.AI</PackageId>
-    <Version>1.0.0</Version>
     <Authors>Intentum Contributors</Authors>
     <Description>AI abstractions and deterministic mock implementations for intent inference.</Description>
     <PackageTags>intent;behavior;ai;inference;dotnet</PackageTags>
