--- a/src/Intentum.Core/Intentum.Core.csproj
+++ b/src/Intentum.Core/Intentum.Core.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>Intentum.Core</PackageId>
-    <Version>1.0.0</Version>
     <Authors>Intentum Contributors</Authors>
     <Description>Intent-driven development core primitives: behavior space, intent inference, confidence.</Description>
     <PackageTags>intent;behavior;bdd;ai;dotnet</PackageTags>
