--- a/src/Intentum.Runtime/Intentum.Runtime.csproj
+++ b/src/Intentum.Runtime/Intentum.Runtime.csproj
@@ -8,8 +8,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>Intentum.Runtime</PackageId>
-    <Version>1.0.0</Version>
     <Authors>Intentum Contributors</Authors>
     <Description>Intent policy and decision engine for inferred behaviors.</Description>
     <PackageTags>intent;behavior;policy;runtime;ai</PackageTags>
