--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,17 +27,13 @@ jobs:
       - name: Build
         run: dotnet build Intentum.slnx --no-restore
       - name: Test with coverage
-        run: |
-          mkdir -p TestResults/coverage
-          dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build \
-            -p:CollectCoverage=true \
-            -p:CoverletOutputFormat=opencover \
-            -p:CoverletOutput=${{ github.workspace }}/TestResults/coverage/
+        run: dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build -p:CollectCoverage=true -p:CoverletOutputFormat=opencover
       - name: Install ReportGenerator
         run: dotnet tool install -g dotnet-reportgenerator-globaltool
       - name: Generate coverage report
         run: |
-          REPORT=$(find TestResults/coverage -name '*.xml' -print -quit)
+          REPORT=$(find . -name '*.opencover.xml' -print -quit)
+          if [ -z "$REPORT" ]; then echo "No coverage file found"; find . -name '*.xml' 2>/dev/null | head -5; exit 1; fi
           reportgenerator -reports:"$REPORT" -targetdir:docs/coverage -reporttypes:Html;Badges
       - name: Install DocFX
         run: dotnet tool install -g docfx
