refactor(codebase): Modernize C# syntax and refine code coverage
Updates projects to leverage C# 12 primary constructors for dependency injection across AI embedding providers and intent models, simplifying constructor definitions.

Restructures core `Intent` types into a dedicated `Intentum.Core.Intent` namespace for clearer organization.

Reconfigures GitHub Actions CI/CD workflows to use `XPlat Code Coverage` for test coverage collection and report generation, migrating from direct Coverlet parameters to a standard data collector. This streamlines the coverage process and ensures `cobertura.xml` output.

Adds XML documentation comments to public API members in `Intentum.Core` and suppresses `CS1591` warnings in project files for better consistency. Includes minor code modernizations such as empty collection initialization (`[]`) and simplified LINQ expressions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,10 @@ jobs:
       - name: Build
         run: dotnet build Intentum.slnx --no-restore
       - name: Test
-        run: |
-          mkdir -p TestResults/coverage
-          dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build -p:CollectCoverage=true -p:CoverletOutputFormat=opencover -p:CoverletOutput=${{ github.workspace }}/TestResults/coverage/ -p:Threshold=70 -p:ThresholdType=line
+        run: dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build --collect:"XPlat Code Coverage" --results-directory TestResults
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-opencover
-          path: TestResults/coverage/
+          name: coverage
+          path: TestResults/
+          if-no-files-found: ignore
