--- a/src/Intentum.AI.AzureOpenAI/Intentum.AI.AzureOpenAI.csproj
+++ b/src/Intentum.AI.AzureOpenAI/Intentum.AI.AzureOpenAI.csproj
@@ -10,6 +10,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
     <PackageId>Intentum.AI.AzureOpenAI</PackageId>
     <Authors>Intentum Contributors</Authors>
     <Description>Azure OpenAI adapter for Intentum intent inference.</Description>
