docs(pages): Add documentation redirects and logo styles
Introduces `index.html` files at the root (`/docs/`) and API (`/docs/api/`) paths to automatically redirect users to the Turkish version of the documentation (e.g., `api/tr/index.html`). This ensures a consistent entry point for documentation access.

Also, adds CSS rules to constrain the maximum height of various logo images within documentation templates, preventing them from appearing excessively large and improving overall page layout.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -44,6 +44,12 @@ jobs:
           rm -rf docs/api
           mkdir -p docs/api
           cp -R docs/_site/* docs/api/
+      - name: Add api/index.html redirect
+        run: |
+          cat > docs/api/index.html << 'EOF'
+          <!DOCTYPE html>
+          <html><head><meta charset="utf-8"><meta http-equiv="refresh" content="0; url=tr/index.html"><title>Intentum</title><script>location.href="tr/index.html";</script></head><body><p><a href="tr/index.html">Documentation (TR)</a></p></body></html>
+          EOF
       # Requires: repo Settings → Pages → Source = "GitHub Actions"
       - name: Setup Pages
         uses: actions/configure-pages@v5
