feat(release): Automate versioning and tagging
Introduces a `release.sh` script to automatically determine and apply the next semantic version based on conventional commits since the last tag, or allow manual version specification.

Enhances GitHub release workflows (`github-release.yml`) with `workflow_dispatch` to enable manual triggering and direct tag input. Updates `README.md` to document the new release script and manual workflow capabilities.

--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -1,5 +1,6 @@
-# NuGet yayını: Tag push (v1.0.0) ile otomatik sürüm (MinVer) + push.
-# Sürüm git tag'inden türetilir; manuel sürüm dosyası güncellemesi gerekmez.
+# NuGet yayını: v* tag push'ta otomatik; veya Actions → Run workflow ile manuel.
+# TETİKLENME: (1) v* tag push (örn. git push origin v1.0.0), (2) Actions sekmesi → nuget-release → Run workflow.
+# Sürüm MinVer ile tag'den türetilir; manuel çalıştırmada version_override ile override edebilirsin.
 name: nuget-release
 
 on:
