--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -1,9 +1,15 @@
 # GitHub Release: v* tag push'ta otomatik release. Release notu git-cliff ile conventional commit'lerden üretilir.
-# Conventional commit: feat:, fix:, docs:, chore: vb. kullan; release notusu otomatik oluşur.
-# Fallback: git-cliff çıktısı boşsa CHANGELOG.md kullanılır.
+# TETİKLENME: (1) v* tag push edildiğinde otomatik, (2) Actions → Run workflow ile manuel (tag gir).
+# Örnek: git tag v1.0.0 && git push origin v1.0.0
 name: github-release
 
 on:
+  workflow_dispatch:
+    inputs:
+      tag_name:
+        description: 'Release için tag (manuel çalıştırmada; örn. v1.0.0)'
+        required: true
+        default: 'v1.0.0'
   push:
     tags:
       - 'v*'
@@ -17,9 +23,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.inputs.tag_name || github.ref }}
       - name: Set version from tag
         id: version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        run: |
+          TAG="${{ github.event.inputs.tag_name }}"
+          if [ -n "$TAG" ]; then
+            echo "version=${TAG#v}" >> $GITHUB_OUTPUT
+          else
+            echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+          fi
       - name: Generate release notes (git-cliff)
         id: changelog
         uses: orhun/git-cliff-action@v4
