--- a/cliff.toml
+++ b/cliff.toml
@@ -1,8 +1,27 @@
-# git-cliff: conventional commit'lardan otomatik release notu
-# feat:, fix:, docs:, chore: vb. kullan; tag push'ta GitHub Release notu üretilir.
+# git-cliff: conventional commit'lardan otomatik CHANGELOG
 # https://git-cliff.org/docs/configuration/
 
 [changelog]
+# Dosya başında bir kez: CHANGELOG nasıl okunur
+header = """
+# Changelog
+
+Bu dosya **conventional commit** mesajlarından otomatik üretilir.
+
+| İşaret | Anlam |
+|--------|--------|
+| **[sürüm]** (örn. 0.0.2) | O sürümde yayınlanan değişiklikler. |
+| **Breaking changes** | Geriye dönük uyumsuz değişiklik; kütüphane kullananlar kodu güncellemeli. Major sürüm (1.0.0) atlanır. |
+| **Features** | Yeni özellik (feat:) → minor sürüm artar. |
+| **Bug Fixes** | Hata düzeltme (fix:) → patch artar. |
+| **Documentation** | Doküman (docs:). |
+| **Miscellaneous** | CI, chore, bakım işleri. |
+
+---
+
+"""
+
+# Her sürüm bloğu: önce Breaking, sonra diğer gruplar; madde metni net
 body = """
 {% if version %}\
 ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
@@ -10,10 +29,20 @@ body = """
 ## [unreleased]
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
+{% if group == "Breaking" %}
+### Breaking changes (geriye dönük uyumsuz)
+{% for commit in commits %}
+- {{ commit.message | upper_first }}{% if commit.scope %} *({{ commit.scope }})*{% endif %}
+{% endfor %}
+{% endif %}\
+{% endfor %}\
+{% for group, commits in commits | group_by(attribute="group") %}
+{% if group != "Breaking" %}
 ### {{ group | striptags | trim | upper_first }}
 {% for commit in commits %}
-- {% if commit.scope %}*({{ commit.scope }})* {% endif %}{% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }}
+- {{ commit.message | upper_first }}{% if commit.scope %} *({{ commit.scope }})*{% endif %}
 {% endfor %}
+{% endif %}\
 {% endfor %}
 """
 trim = true
@@ -23,7 +52,10 @@ render_always = true
 conventional_commits = true
 filter_unconventional = true
 require_conventional = false
+# Sıra önemli: ilk eşleşen kazanır. Breaking önce.
 commit_parsers = [
+  { message = "^[a-zA-Z]*!:", group = "Breaking" },
+  { body = "BREAKING CHANGE", group = "Breaking" },
   { message = "^feat", group = "Features" },
   { message = "^fix", group = "Bug Fixes" },
   { message = "^doc", group = "Documentation" },
@@ -40,3 +72,4 @@ commit_parsers = [
 ]
 filter_commits = false
 sort_commits = "oldest"
+protect_breaking_commits = true
