--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -5,11 +5,6 @@ on:
     branches: [ master ]
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -17,6 +12,8 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v4
@@ -48,7 +45,7 @@ jobs:
         run: |
           cat > docs/api/index.html << 'EOF'
           <!DOCTYPE html>
-          <html><head><meta charset="utf-8"><meta http-equiv="refresh" content="0; url=tr/index.html"><title>Intentum</title><script>location.href="tr/index.html";</script></head><body><p><a href="tr/index.html">Documentation (TR)</a></p></body></html>
+          <html><head><meta charset="utf-8"><title>Intentum</title><script>globalThis.location.href="tr/index.html";</script></head><body><p><a href="tr/index.html">Documentation (TR)</a></p></body></html>
           EOF
       # Requires: repo Settings → Pages → Source = "GitHub Actions"
       - name: Setup Pages
@@ -61,6 +58,9 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
