--- a/samples/Intentum.Sample/Intentum.Sample.csproj
+++ b/samples/Intentum.Sample/Intentum.Sample.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Intentum.Core\Intentum.Core.csproj" />
@@ -12,6 +12,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <!-- S1192: string literals in demo scenarios kept readable; library code uses constants -->
+    <NoWarn>$(NoWarn);S1192</NoWarn>
   </PropertyGroup>
 
 </Project>
