--- a/src/Intentum.AI.Caching.FusionCache/Intentum.AI.Caching.FusionCache.csproj
+++ b/src/Intentum.AI.Caching.FusionCache/Intentum.AI.Caching.FusionCache.csproj
@@ -22,7 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.2" />
     <PackageReference Include="ZiggyCreatures.FusionCache" Version="2.5.0" />
-    <PackageReference Include="System.Text.Json" Version="10.0.0" />
+    <PackageReference Include="ZiggyCreatures.FusionCache.Backplane.StackExchangeRedis" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
