--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -20,7 +20,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
         with:
           fetch-depth: 0
           ref: ${{ github.event.inputs.tag_name || github.ref }}
@@ -35,7 +35,7 @@ jobs:
           fi
       - name: Generate release notes (git-cliff)
         id: changelog
-        uses: orhun/git-cliff-action@v4
+        uses: orhun/git-cliff-action@e16f179f0be49ecdfe63753837f20b9531642772
         with:
           config: cliff.toml
           args: --latest -o RELEASE_NOTES.md -v
@@ -48,7 +48,7 @@ jobs:
             cp CHANGELOG.md RELEASE_NOTES.md 2>/dev/null || echo "No changelog" > RELEASE_NOTES.md
           fi
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@a06a81a03ee405af7f2048a818ed3f03bbf83c7b
         with:
           name: v${{ steps.version.outputs.version }}
           body_path: RELEASE_NOTES.md
