test(core): add extensive unit tests and coverage threshold
- Add IntentPolicyBuilder rule addition test verifying custom rule creation
- Add BehaviorSpaceBuilder tests for action metadata and timestamp usage
- Add IntentClusterer tests covering clustering, ID, records, summary, and DI registration
- Add IntentConfidence level mapping test from score ranges
- Add BehaviorSpace evaluation test ensuring normalization of intent signal weights
- Add OpenAI service registration and inference tests with mock implementations
- Add various utility and assertion helper tests verifying model creation and policy decisions
- Introduce 80% minimum line coverage threshold in test project configuration
- Update CI workflow to enforce coverage exclusions and pass coverage reports to SonarCloud

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,8 @@ jobs:
             /o:"${{ env.SONAR_ORGANIZATION }}" \
             /d:sonar.token="$SONAR_TOKEN" \
             /d:sonar.host.url="https://sonarcloud.io" \
-            /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
+            /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" \
+            /d:sonar.exclusions="**/samples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh"
 
       - name: Restore
         run: dotnet restore Intentum.slnx
@@ -56,6 +57,8 @@ jobs:
       - name: Build
         run: dotnet build Intentum.slnx --no-restore
 
+      # Coverage: OpenCover report for SonarCloud. 80% target: SonarCloud Quality Gate
+      # (project settings) and/or Intentum.Tests.csproj Coverlet Threshold=80.
       - name: Test
         run: >
           dotnet test tests/Intentum.Tests/Intentum.Tests.csproj --no-build
