chore(ci): update SonarCloud coverage exclusions
- Add sonar.coverage.exclusions property to .sonarcloud.properties
- Exclude CLI/tool and optional integration code not covered by unit tests
- Update GitHub Actions workflow to include coverage exclusions in SonarCloud analysis
- Ensure coverage metrics reflect tested library code without dilution from excluded files and folders

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,8 @@ jobs:
             /d:sonar.token="$SONAR_TOKEN" \
             /d:sonar.host.url="https://sonarcloud.io" \
             /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" \
-            /d:sonar.exclusions="**/samples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh"
+            /d:sonar.exclusions="**/samples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh" \
+            /d:sonar.coverage.exclusions="**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**"
 
       - name: Restore
         run: dotnet restore Intentum.slnx
