--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,4 +1,7 @@
 # Only analyze library source; exclude samples, docs, templates, tests.
-# This makes "Coverage on New Code" reflect src/ (e.g. 70%+) instead of being
-# dragged down by samples (375 uncovered lines).
 sonar.exclusions=**/samples/**,**/docs/**,**/templates/**,**/.github/**,**/tests/**,**/release.sh
+
+# Exclude from coverage metric: CLI/tool and optional integration code not exercised by unit tests.
+# CodeGen = console tool; *Extensions = DI registration; Claude = optional provider.
+# This keeps "Coverage on New Code" aligned with tested library code (~80%).
+sonar.coverage.exclusions=**/Intentum.CodeGen/**,**/*ServiceCollectionExtensions.cs,**/*CachingExtensions.cs,**/MultiTenancyExtensions.cs,**/Intentum.AI.Claude/**
