chore(build): centralize README.md packaging in root props file
- Remove individual README.md packaging entries from all project files
- Add a single ItemGroup in Directory.Build.props to include README.md for all packages
- Prevent NU5039 warnings by packaging README.md from repo root uniformly
- Simplify project file maintenance by centralizing packaging configuration

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -9,6 +9,10 @@
     <MinVerTagPrefix>v</MinVerTagPrefix>
     <MinVerMinimumMajorMinor>1.0</MinVerMinimumMajorMinor>
   </PropertyGroup>
+  <!-- Tüm paketlere repo kökündeki README.md dahil edilir (NU5039 önlenir) -->
+  <ItemGroup>
+    <None Include="$(MSBuildThisFileDirectory)..\README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MinVer" Version="7.0.0" PrivateAssets="All" />
   </ItemGroup>
