docs(advanced-features): add detailed overview and usage of extended Intentum packages
- Add a comprehensive packages and features overview section for Intentum extended packages
- Document how to set up and use Redis-based embedding caching with Intentum.AI.Caching.Redis
- Introduce policy composition techniques: inheritance, merge, and A/B policy variants
- Explain rate limiting usage with IRateLimiter and MemoryRateLimiter
- Describe streaming inference methods InferMany and InferManyAsync
- Detail persistence options with Entity Framework Core, Redis, and MongoDB implementations
- Provide usage instructions for the webhook/event system with Intentum.Events
- Document intent clustering concepts, strategies, and setup using Intentum.Clustering
- Explain intent explainability using Intentum.Explainability with signal contributions and summaries
- Describe intent simulation with Intentum.Simulation for generating synthetic behavior spaces
- Present A/B experiments with Intentum.Experiments including variant setup and traffic splitting
- Detail multi-tenancy support via Intentum.MultiTenancy with tenant-scoped repositories
- Explain policy versioning capabilities with Intentum.Versioning for rollback and rollout management
- Add internal MetaPackage stub referencing core, runtime, AI, and all provider packages for full adapter inclusion

--- a/docs/en/toc.yml
+++ b/docs/en/toc.yml
@@ -2,6 +2,20 @@
 items:
   - name: Home
     href: index.md
+  - name: Why Intentum
+    href: why-intentum.md
+  - name: Manifesto
+    href: manifesto.md
+  - name: Intentum Canon
+    href: intentum-canon.md
+  - name: Why Intent ≠ Logs
+    href: why-intent-not-logs.md
+  - name: Designing Intent Models
+    href: designing-intent-models.md
+  - name: Real-world Scenarios
+    href: real-world-scenarios.md
+  - name: Roadmap
+    href: roadmap.md
   - name: Architecture
     href: architecture.md
   - name: Setup
@@ -12,6 +26,8 @@ items:
     href: codegen.md
   - name: Providers
     href: providers.md
+  - name: How to use AI providers
+    href: ai-providers-howto.md
   - name: Testing
     href: testing.md
   - name: Audience
