--- a/samples/Intentum.Sample.Web/Intentum.Sample.Web.csproj
+++ b/samples/Intentum.Sample.Web/Intentum.Sample.Web.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.12.20" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
   </ItemGroup>
 
   <ItemGroup>
